--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,39 @@
 *:after {
   box-sizing: border-box;
 }
+
+body {
+  background-image: url('/images/site/checkerboard.jpg');
+  background-size: cover; 
+  background-repeat: no-repeat;
+  background-attachment: fixed; 
+  background-position: center;
+}
+
+nav {
+  background-color: black;
+  color: white;
+  padding: 10px 20px; 
+  border-radius: 0px;
+  position: relative;
+  top: 20px;
+  display: flex; 
+  justify-content: space-around;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+
+.content-box {
+  background-color: white;
+  padding: 20px; 
+  margin: 20px auto;
+  width: 80%;
+  max-width: 1200px;
+  border-radius: 8px; 
+  box-shadow: 0 4px 8px turquoise;
+}
