--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-
-<div class="content-box">
-    <h1>CSE Motors</h1>
+<h1 class="welcome-heading">Welcome to CSE Motors</h1>
+<div class="image-container">
+    <img src=".\images\vehicles\delorean.jpg" alt="Delorean" style="max-width: 100%; height: auto;">
 </div>
