--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,57 @@
+
 <h1 class="welcome-heading">Welcome to CSE Motors</h1>
+
+<!-- Delorean Image -->
 <div class="image-container">
     <img src=".\images\vehicles\delorean.jpg" alt="Delorean" style="max-width: 100%; height: auto;">
 </div>
+
+<!-- Translucent Info Box-->
+
+<div class="info-box">
+    <h2>DMC Delorean</h2>
+    <p>3 Cup holders</p>
+    <p>Superman doors</p>
+    <p>Fuzzy dice!</p>
+    <a href="https://newrepo-rjtl.onrender.com/" class="image-link">
+        <img src=".\images\site\own_today.png" alt="Own Today Button">
+      </a>
+  </div>
+
+  <div class="columns-container">
+    <!-- Delorean Upgrades Column -->
+    <div class="column upgrades-column">
+      <h2>Delorean Upgrades</h2>
+      <div class="upgrade-grid">
+        <a href="https://newrepo-rjtl.onrender.com">
+          <img src=".\images\upgrades\flux-cap.png" alt="Flux Capacitor">
+          <p>Flux Capacitor</p>
+        </a>
+        <a href="https://newrepo-rjtl.onrender.com">
+          <img src=".\images\upgrades\flame.jpg" alt="Flame Decals">
+          <p>Flame Decals</p>
+        </a>
+        <a href="https://newrepo-rjtl.onrender.com">
+          <img src=".\images\upgrades\bumper_sticker.jpg" alt="Bumper Stickers">
+          <p>Bumper Stickers</p>
+        </a>
+        <a href="https://newrepo-rjtl.onrender.com">
+          <img src=".\images\upgrades\hub-cap.jpg" alt="Hub Caps">
+          <p>Hub Caps</p>
+        </a>
+      </div>
+    </div>
+  
+    <!-- DMC Delorean Reviews Column -->
+    <div class="column reviews-column">
+      <h2>DMC Delorean Reviews</h2>
+      <ul>
+        <li>"So fast it's almost like traveling in time." (4/5)</li>
+        <li>"Coolest ride on the road." (4/5)</li>
+        <li>"I'm feeling McFly!" (5/5)</li>
+        <li>"The most futuristic ride of our day." (4.5/5)</li>
+        <li>"80's livin and I love it!" (5/5)</li>
+      </ul>
+    </div>
+  </div>
+  
