--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 
 <h1 class="welcome-heading">Welcome to CSE Motors</h1>
-
+<%- messages() %>
 <!-- Delorean Image -->
 <div class="image-container">
     <img src="./images/vehicles/delorean.jpg" alt="Delorean" style="max-width: 100%; height: auto;">
