--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/large-styles.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+
+
+    <link rel="icon" href="/images/site/favicon-32x32.png" type="image/x-icon">
 </head>
