--- a/public/css/large-styles.css
+++ b/public/css/large-styles.css
@@ -278,7 +278,7 @@ span {
   color: #555;
   background-color: #f9f9f9;
   padding: 10px;
-  border-left: 4px solid #007BFF;
+  border-left: 4px solid #666;
   border-radius: 4px;
 }
 
