--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,24 +1,24 @@
 <% if (title) { %>
     <h1 class="form-title">
-      <%= title %>
+        <%= title %>
     </h1>
-    <% } else { %>
+<% } else { %>
     <h1 class="form-title">Login</h1>
-    <% } %>
-    
-    <!-- Display flash messages -->
-    <%- messages() %>
-    <form action="/account/login" method="POST" class="form-container">
-      <div class="form-group">
-        <label for="email">Email:</label>
+<% } %>
+
+<!-- Display flash messages -->
+<%- messages() %>
+
+<form action="/account/login" method="POST" class="form-container" id="loginForm">
+    <div class="form-group">
+        <label for="account_email">Email:</label>
         <input type="email" name="account_email" placeholder="username or email" id="account_email" class="form-input" required>
-      </div>
-      <div class="form-group">
+    </div>
+    <div class="form-group">
         <label for="account_password">Password:</label>
         <input type="password" name="account_password" id="account_password" class="form-input" required>
-      </div>
-      <button type="submit" class="form-button">Login</button>
-    </form>
-    
-    <p class="register-link">Don't have an account? <a href="/account/register">Sign-up</a></p>
-    
+    </div>
+    <button type="submit" class="form-button">Login</button>
+</form>
+
+<p class="register-link">Don't have an account? <a href="/account/register">Sign-up</a></p>
