--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -1,28 +1,39 @@
 <% if (title) { %>
-    <h1 class="main-title">
+    <h1 class="man-title">
         <%= title %>
     </h1>
-<% } else { %>
-    <h1 class="main-title">Vehicle Management</h1>
-<% } %>
+    <% } else { %>
+        <h1 class="man-title">Vehicle Management</h1>
+        <% } %>
 
-<% if (messages && messages.length > 0) { %>
-    <div class="flash-messages">
-        <% messages.forEach(function(message) { %>
-            <div class="flash-message notice">
-                <p>
-                    <%= message %>
-                </p>
-            </div>
-        <% }); %>
-    </div>
-<% } %>
+            <% if (Array.isArray(messages) && messages.length> 0) { %>
+                <div class="flash-messages">
+                    <% messages.forEach(function(message) { %>
+                        <div class="flash-message notice">
+                            <p>
+                                <%= message %>
+                            </p>
+                        </div>
+                        <% }); %>
+                </div>
+                <% } %>
+                    <main class="management-page">
 
-<main class="management-page">
-    <div class="management-page__links">
-        <a href="/inv/add-classification" class="management-page__btn">Add New Classification</a>
-        <a href="/inv/add-vehicle" class="management-page__btn">Add New Vehicle</a>
-    </div>
+                        <div class="management-page__links">
+                            <a href="inv/add-classification" class="management-page__btn">Add New Classification</a>
+                            <a href="inv/add-vehicle" class="management-page__btn">Add New Vehicle</a>
+                        </div>
 
-    <a href="#" class="management-page__error-link">Error Link</a>
-</main>
+                        <a href="#" class="management-page__error-link">Error Link</a>
+
+                        <table id="inventoryDisplay"></table>
+
+                        <p>Choose the Classification to see those inventory items</p>
+
+                        <%- classificationSelect %>
+
+                            <noscript>JavaScript must be enabled to use this page.</noscript>
+
+                            <script src="../../js/inventory.js"></script>
+
+                    </main>
