--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <%- messages() %>
 <!-- Delorean Image -->
 <div class="image-container">
-    <img src="./images/vehicles/delorean.jpg" alt="Delorean" style="max-width: 100%; height: auto;">
+    <img src="/images/vehicles/delorean.jpg" alt="Delorean" style="max-width: 100%; height: auto;">
 </div>
 
 <!-- Translucent Info Box-->
@@ -14,7 +14,7 @@
     <p>Superman doors</p>
     <p>Fuzzy dice!</p>
     <a href="https://newrepo-rjtl.onrender.com/" class="image-link">
-        <img src="./images/site/own_today.png" alt="Own Today Button">
+        <img src="/images/site/own_today.png" alt="Own Today Button">
       </a>
   </div>
 
@@ -24,19 +24,19 @@
       <h2>Delorean Upgrades</h2>
       <div class="upgrade-grid">
         <a href="https://newrepo-rjtl.onrender.com">
-          <img src="./images/upgrades/flux-cap.png" alt="Flux Capacitor">
+          <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor">
           <p>Flux Capacitor</p>
         </a>
         <a href="https://newrepo-rjtl.onrender.com">
-          <img src="./images/upgrades/flame.jpg" alt="Flame Decals">
+          <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
           <p>Flame Decals</p>
         </a>
         <a href="https://newrepo-rjtl.onrender.com">
-          <img src="./images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
+          <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Stickers">
           <p>Bumper Stickers</p>
         </a>
         <a href="https://newrepo-rjtl.onrender.com">
-          <img src="./images/upgrades/hub-cap.jpg" alt="Hub Caps">
+          <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
           <p>Hub Caps</p>
         </a>
       </div>
